--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -4,3 +4,5 @@
 /member/logout.do=handler.member.LogoutHandler
 /member/findid.do=handler.member.FindIdHandler
 /member/findpwd.do=handler.member.FinPwdHandler
+/foodlist/mylist.do=handler.foodlist.MyListHandler
+/foodlist/updatetoday.do=handler.foodlist.UpdateTodayHandler
