--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -1,4 +1,4 @@
-/foodlist/updateamount.do=handler.foodlist.UpdateAmountHandler
+/foodlist/delete.do=handler.foodlist.DeleteHandler
 /foodlist/category.do=handler.foodlist.CategoryHandler
 /foodlist/mylist.do=handler.foodlist.MyListHandler
 /foodlist/updatetoday.do=handler.foodlist.UpdateTodayHandler
@@ -17,3 +17,4 @@
 /member/findpwd.do=handler.member.FindPwdHandler
 /freeboard/fb-list.do=handler.freeboard.ListHandler
 /freeboard/add.do=handler.freeboard.AddHandler
+/freeboard/fb_add.do=handler.freeboard.AddHandler
