--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -2,6 +2,7 @@
 /foodlist/category.do=handler.foodlist.CategoryHandler
 /foodlist/mylist.do=handler.foodlist.MyListHandler
 /foodlist/updatetoday.do=handler.foodlist.UpdateTodayHandler
+/foodlist/updateamount.do=handler.foodlist.UpdateAmountHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/add.do=handler.foodmanage.AddHandler
@@ -18,3 +19,4 @@
 /freeboard/fb-list.do=handler.freeboard.ListHandler
 /freeboard/add.do=handler.freeboard.AddHandler
 /freeboard/fb_add.do=handler.freeboard.AddHandler
+/freeboard/fb_detail.do=handler.freeboard.DetailHandler
