--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -3,6 +3,7 @@
 /foodlist/mylist.do=handler.foodlist.MyListHandler
 /foodlist/updatetoday.do=handler.foodlist.UpdateTodayHandler
 /foodlist/updateamount.do=handler.foodlist.UpdateAmountHandler
+/foodlist/ingredient.do=handler.foodlist.IngredientHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/add.do=handler.foodmanage.AddHandler
