--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -6,11 +6,12 @@
 /foodlist/ingredient.do=handler.foodlist.IngredientHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
-/foodmanage/add.do=handler.foodmanage.AddHandler
+/foodmanage/select.do=handler.foodmanage.SelectHandler
+/foodmanage/search.do=handler.foodmanage.SearchHandler
+/foodmanage/temp.do=handler.foodmanage.TempHandler
 /foodmanage/detail.do=handler.foodmanage.DetailHandler
+/foodmanage/add.do=handler.foodmanage.AddHandler
 /foodmanage/delete.do=handler.foodmanage.DeleteHandler
-/foodmanage/selectmid.do=handler.foodmanage.selectMidHandler
-/foodmanage/selectname.do=handler.foodmanage.selectNameHandler
 /member/join.do=handler.member.JoinHandler
 /member/checkid.do=handler.member.CheckIdHandler
 /member/login.do=handler.member.LoginHandler
@@ -21,3 +22,7 @@
 /freeboard/add.do=handler.freeboard.AddHandler
 /freeboard/fb_add.do=handler.freeboard.AddHandler
 /freeboard/fb_detail.do=handler.freeboard.DetailHandler
+/member/detail.do=handler.member.DetailHandler
+/member/selectimg.do=handler.member.SelectImgHandler
+/member/detail.do=handler.member.DetailHandler
+/member/selectimg.do=handler.member.SelectImgHandler
