--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -18,8 +18,8 @@
 /member/logout.do=handler.member.LogoutHandler
 /member/findid.do=handler.member.FindIdHandler
 /member/findpwd.do=handler.member.FindPwdHandler
-/freeboard/fb-list.do=handler.freeboard.ListHandler
-/freeboard/add.do=handler.freeboard.AddHandler
+/freeboard/fb_list.do=handler.freeboard.ListHandler
+/freeboard/fb_add.do=handler.freeboard.AddHandler
 /freeboard/fb_add.do=handler.freeboard.AddHandler
 /freeboard/fb_detail.do=handler.freeboard.DetailHandler
 /member/detail.do=handler.member.DetailHandler
