--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -5,6 +5,7 @@
 /foodlist/updateamount.do=handler.foodlist.UpdateAmountHandler
 /foodlist/ingredient.do=handler.foodlist.IngredientHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
+/recipelist/category.do=handler.recipelist.CategoryHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/select.do=handler.foodmanage.SelectHandler
 /foodmanage/search.do=handler.foodmanage.SearchHandler
