--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -28,3 +28,5 @@
 /member/selectimg.do=handler.member.SelectImgHandler
 /freeboard/fb_edit.do=handler.freeboard.EditHandler
 /freeboard/fb_detail.do=handler.freeboard.DetailHandler
+/freecomment/fc_add.do=handler.freecomment.AddHandler
+/freecomment/fc_delete.do=handler.freecomment.DeleteHandler
