--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -6,6 +6,8 @@
 /foodlist/ingredient.do=handler.foodlist.IngredientHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /recipelist/category.do=handler.recipelist.CategoryHandler
+#checkbox -> recipelist 
+/recipelist/recplist.do=handler.recipelist.RecipeListHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/select.do=handler.foodmanage.SelectHandler
 /foodmanage/search.do=handler.foodmanage.SearchHandler
