--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -6,8 +6,11 @@
 /foodlist/ingredient.do=handler.foodlist.IngredientHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /recipelist/category.do=handler.recipelist.CategoryHandler
-#checkbox -> recipelist 
-/recipelist/recplist.do=handler.recipelist.RecipeListHandler
+/recipe/getName.do=handler.recipe.RecipeNameHandler
+/recipe/getMat.do=handler.recipe.RecipeMatHandler
+/recipe/byName.do=handler.recipe.RecipeByNameHandler
+/recipe/like.do=handler.recipe.RecipelikesHandler
+/recipe/AllData.do=handler.recipe.RecipeAllDataHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/select.do=handler.foodmanage.SelectHandler
 /foodmanage/search.do=handler.foodmanage.SearchHandler
