foodlist css & commands

--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -28,6 +28,13 @@
 /freeboard/fb_list.do=handler.freeboard.ListHandler
 /freeboard/fb_add.do=handler.freeboard.AddHandler
 /freeboard/fb_detail.do=handler.freeboard.DetailHandler
+/freeboard/fb_edit.do=handler.freeboard.EditHandler
+/freeboard/fb_delete.do=handler.freeboard.DeleteHandler
+/freeboard/fb_searchtitle.do=handler.freeboard.SearchTitleHandler
+/freeboard/fb_searchid.do=handler.freeboard.SearchIdHandler
+/freecomment/fc_add.do=handler.freecomment.AddHandler
+/freecomment/fc_delete.do=handler.freecomment.DeleteHandler
+/freelike/fl_up.do=handler.freelike.LikeUpHandler
 /member/detail.do=handler.member.DetailHandler
 /member/selectimg.do=handler.member.SelectImgHandler
 /member/detail.do=handler.member.DetailHandler
@@ -36,3 +43,4 @@
 /freeboard/fb_detail.do=handler.freeboard.DetailHandler
 /freecomment/fc_add.do=handler.freecomment.AddHandler
 /freecomment/fc_delete.do=handler.freecomment.DeleteHandler
+/mainindex/mainIndex.do=handler.mainindex.MainIndexHandler
