--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -1,7 +1,6 @@
 /foodlist/delete.do=handler.foodlist.DeleteHandler
 /foodlist/category.do=handler.foodlist.CategoryHandler
 /foodlist/mylist.do=handler.foodlist.MyListHandler
-/foodlist/updatetoday.do=handler.foodlist.UpdateTodayHandler
 /foodlist/updateamount.do=handler.foodlist.UpdateAmountHandler
 /recipelist/mylist.do=handler.recipelist.ListHandler
 /recipelist/category.do=handler.recipelist.CategoryHandler
@@ -43,3 +42,4 @@
 /freecomment/fc_add.do=handler.freecomment.AddHandler
 /freecomment/fc_delete.do=handler.freecomment.DeleteHandler
 /mainindex/mainIndex.do=handler.mainindex.MainIndexHandler
+/managerpick/managerpick.do=handler.manager.ManagerPickHandler
