--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -9,7 +9,7 @@
 /recipe/byName.do=handler.recipe.RecipeByNameHandler
 /recipe/like.do=handler.recipe.RecipelikesHandler
 /recipe/AllData.do=handler.recipe.RecipeAllDataHandler
-/recipe/Mp.do=handler.RecipeManagerPickHandler
+/recipe/Mp.do=handler.recipe.RecipeManagerPickHandler
 /foodmanage/list.do=handler.foodmanage.ListHandler
 /foodmanage/select.do=handler.foodmanage.SelectHandler
 /foodmanage/search.do=handler.foodmanage.SearchHandler
