--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -43,3 +43,4 @@
 /freecomment/fc_delete.do=handler.freecomment.DeleteHandler
 /mainindex/mainIndex.do=handler.mainindex.MainIndexHandler
 /managerpick/managerpick.do=handler.manager.ManagerPickHandler
+/member/out.do=handler.member.OutHandler
