commands and mylist

--- a/miniproject/src/main/webapp/WEB-INF/commands.properties
+++ b/miniproject/src/main/webapp/WEB-INF/commands.properties
@@ -44,3 +44,4 @@
 /mainindex/mainIndex.do=handler.mainindex.MainIndexHandler
 /managerpick/managerpick.do=handler.manager.ManagerPickHandler
 /member/out.do=handler.member.OutHandler
+/foodmanage/showcnt.do=handler.foodmanage.CntHandler
